# angi-lister

./: .env.example  .gitignore  ARCHITECTURE.md  Dockerfile  README.md  alembic.ini  claudepad.md  docker-compose.prod.yml  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 001_initial_schema.py  002_auth_tables.py  002_personalization_engine.py  003_auth_tables.py  004_row_level_security.py  005_api_keys.py  006_tenant_files.py
app/: config.py  main.py  worker.py
app/db/: session.py
app/models/: __init__.py  angi_mapping.py  api_key.py  auth.py  duplicate_match.py  geocode_cache.py  lead.py  lead_event.py  outbound_message.py  tenant.py  tenant_file.py  tenant_home_base.py  tenant_job_rule.py  tenant_special.py  webhook_receipt.py
app/routers/: admin_api.py  api.py  auth.py  console.py  health.py  tenant_api.py  webhook.py
app/schemas/: angi.py  api.py
app/services/: analytics.py  api_auth.py  auth.py  duplicates.py  email.py  geo_utils.py  geocoding.py  ingestion.py  llm.py  metrics.py  monitoring.py  personalization.py
app/templates/: api_docs.html
app/templates/auth/: login.html
docs/: architecture.md  main_ask.md
infra/: caddy.conf  deploy.sh  init-db.sql  setup-ovh2.sh
scripts/: seed.py  simulate.py  smoke_test.sh  wet_test.py
tests/: conftest.py  test_admin_api.py  test_angi_contract.py  test_conversion.py  test_duplicates.py  test_email_page.py  test_geocoding.py  test_ingestion.py  test_monitoring.py  test_personalization.py  test_rls.py  test_tenant_api.py  test_webhook.py  test_worker.py
(+12 files in other folders)
